# ai-agency

./: .gitignore  CLAUDE.md  docker-compose.yml
.github/workflows/: claude-code-review.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 16b9b6672f34_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: __init__.py  audits.py
backend/app/data_sources/: __init__.py  instagram.py  mock_data.py  schemas.py
backend/app/models/: __init__.py  audience_overlap.py  audit.py  audit_influencer.py  brand.py  influencer.py
backend/app/schemas/: audit.py
backend/app/services/: audit_orchestrator.py  scoring.py
backend/app/workers/: audit_worker.py
backend/tests/: test_instagram.py  test_scoring.py
frontend/: Dockerfile  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/audit/[id]/: error.tsx  page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/audit/: error-view.tsx  progress-view.tsx
frontend/src/components/audit/report/: brand-header.tsx  health-gauge.tsx  influencer-card.tsx  influencer-grid.tsx  overlap-matrix.tsx  recommendations-stub.tsx  report-cta.tsx  report-layout.tsx  score-badge.tsx
frontend/src/components/landing/: audit-form.tsx  hero-section.tsx
frontend/src/hooks/: use-audit.ts  use-create-audit.ts  use-lookup-audit.ts
frontend/src/lib/: api.ts  format.ts
frontend/src/types/: audit.ts
tasks/: DECISIONS.md  LESSONS.md  TODO.md
